--- a/site/index.html
+++ b/site/index.html
@@ -38,8 +38,15 @@ socket.on("say_tts", datas => {
 })
 
 
+
 if (annyang) {
     // Let's define our first command. First the text we expect, and then the function it should call
+
+    socket.on("annyang_setLanguage", datas => {
+        if(!datas) return;
+        annyang.setLanguage(datas.language || "fr");
+    })
+    
     var commands = {
       '*all': async function(all) {
         document.getElementById("text").textContent = all
